--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "HKBSubs Prime Music",
+  "name": "Musicalink",
   "version": "1.0",
   "description": "Music Bot",
   "main": "index.js",
